<resources>
    <string name="app_name">CustomView</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="RvLayoutManager">RvLayoutManager</string>
    <string name="autosize_view">自适应大小的文本控件</string>
    <string name="alipay_home">支付宝首页效果</string>

    <string name="text_sys_tips">系统提示</string>
    <string name="text_tips_notice">检测到系统未启用此App的通知权限，请前往手动开启通知栏权限！</string>
    <string name="text_start_open">去开启</string>
    <string name="str_cancel">取消</string>
    <string name="str_write_email">写邮件</string>
    <string name="str_sender">发送人:</string>
    <string name="str_cs_person">抄送人:</string>
    <string name="str_subject">主题:</string>
    <string name="str_subject_hint">请输入主题</string>
    <string name="str_receive_sender">收件人:</string>
    <string name="str_send">发送</string>
    <string name="send">发送</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="permission_request_denied">权限被拒绝</string>

</resources>
